# SCiPNET

./: README.md  command.py  main.py  pyproject.toml  users.json
running/: session.json
