[tool.poetry]
name = "scipnet"
version = "0.0.1"
description = ""
authors = ["XYCode-Kerman <xycode-xyc@outlook.com>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
